--- a/res/layout/activity_start_exam.xml
+++ b/res/layout/activity_start_exam.xml
@@ -1,50 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEFEF"
-    android:orientation="vertical" >
+    android:background="#EFEFEF" >
 
-    <com.guohao.custom.Title
-        android:id="@+id/id_custom_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </com.guohao.custom.Title>
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/id_imageview_ti_type"
-        android:layout_width="50dp"
-        android:layout_height="25dp"
-        android:layout_margin="11dp"
-        android:src="@drawable/img308" />
+        <com.guohao.custom.Title
+            android:id="@+id/id_custom_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </com.guohao.custom.Title>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbarSize="3dp"
-        android:scrollbarThumbVertical="@color/scrollBar" >
+        <com.guohao.custom.MyViewPager
+            android:id="@+id/id_myviewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="#EFEFEF"
+            android:flipInterval="30"
+            android:persistentDrawingCache="animation" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D8D8D8" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:layout_height="50dp"
+            android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/id_textview_ti"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="1。（）工作领导人不得直接参加操作，必须在现场不间断地进行监护" />
+            <LinearLayout
+                android:id="@+id/id_linearlayout_choose_ti"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center" >
 
-            <ListView
-                android:id="@+id/id_listview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-            </ListView>
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/img75" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp" >
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#D8D8D8" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5/6" />
+            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
-</LinearLayout>
+    <View
+        android:id="@+id/id_view_alert_ceng"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#3f000000"
+        android:visibility="gone" />
+
+</RelativeLayout>
