--- a/res/layout/custom_exam_ti_checkbox_bg.xml
+++ b/res/layout/custom_exam_ti_checkbox_bg.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#fff"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp" >
+    android:paddingRight="8dp"
+    android:orientation="horizontal" >
 
+    <TextView 
+        android:id="@+id/id_textview_serial_num"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:gravity="center"/>
+    
     <TextView
         android:id="@+id/id_textview_exam_ti_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="A.间接带电工作" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:layout_weight="1" />
 
     <CheckBox
         android:id="@+id/id_checkbox"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_gravity="center"
         android:button="@null"
-        android:background="@drawable/custom_selector_checkbox"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true" />
+        android:background="@drawable/custom_selector_checkbox" />
 
-</RelativeLayout>
+</LinearLayout>
