28-回滚日志，找到listview点击事件，屏蔽checkbox，响应onitem点击

--- a/res/layout/custom_exam_ti_checkbox_bg.xml
+++ b/res/layout/custom_exam_ti_checkbox_bg.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:background="#fff"
+    android:orientation="horizontal"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:orientation="horizontal" >
+    android:paddingRight="8dp" >
 
-    <TextView 
-        android:id="@+id/id_textview_serial_num"
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
-        android:gravity="center"/>
-    
     <TextView
-        android:id="@+id/id_textview_exam_ti_item"
-        android:layout_width="0dp"
+        android:id="@+id/id_textview_serial_num"
+        android:layout_width="25dp"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:layout_weight="1" />
+        android:gravity="center" />
+
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" >
+
+        <TextView
+            android:id="@+id/id_textview_exam_ti_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical" />
+    </FrameLayout>
 
     <CheckBox
         android:id="@+id/id_checkbox"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
-        android:button="@null"
-        android:background="@drawable/custom_selector_checkbox" />
+        android:background="@drawable/custom_selector_checkbox"
+        android:button="@null" />
 
 </LinearLayout>
