29-完成选项选择，接下来是存储选择到数据库

--- a/res/layout/custom_exam_ti_radio_bg.xml
+++ b/res/layout/custom_exam_ti_radio_bg.xml
@@ -33,6 +33,8 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
+        android:focusable="false"
+        android:clickable="false"
         android:background="@drawable/custom_selector_radio"
         android:button="@null" />
 
