51-修复快速切换选择试题，标题随着滚动

--- a/res/layout/activity_answer_show.xml
+++ b/res/layout/activity_answer_show.xml
@@ -29,5 +29,11 @@
         ptr:ptrAnimationStyle="flip"  
         android:scrollbarSize="3dp"
         android:scrollbarThumbVertical="@color/scrollBar" />
+    <TextView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="没有更多了"
+        android:textColor="#999"/>
 
 </LinearLayout>
