--- a/res/layout/activity_answer_show.xml
+++ b/res/layout/activity_answer_show.xml
@@ -17,23 +17,30 @@
         android:layout_height="10dp"
         android:background="#00000000" />
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        xmlns:ptr="http://schemas.android.com/apk/res-auto" 
-        android:id="@+id/id_pulllistview"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fastScrollEnabled="false"  
-        android:orientation="vertical"
-        ptr:ptrDrawable="@drawable/default_ptr_flip"
-        ptr:ptrAnimationStyle="flip"  
-        android:scrollbarSize="3dp"
-        android:scrollbarThumbVertical="@color/scrollBar" />
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="没有更多了"
-        android:textColor="#999"/>
+        android:layout_weight="1" >
+
+        <com.handmark.pulltorefresh.library.PullToRefreshListView
+            xmlns:ptr="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/id_pulllistview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fastScrollEnabled="false"
+            android:orientation="vertical"
+            android:scrollbarSize="3dp"
+            android:scrollbarThumbVertical="@color/scrollBar"
+            ptr:ptrAnimationStyle="flip"
+            ptr:ptrDrawable="@drawable/default_ptr_flip" />
+
+        <TextView
+            android:id="@+id/id_textview_no_have_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#999" />
+    </RelativeLayout>
 
 </LinearLayout>
