53-完成上拉加载更多。bug：数据不满一屏，正在加载上移

--- a/res/layout/activity_answer_show.xml
+++ b/res/layout/activity_answer_show.xml
@@ -29,9 +29,11 @@
             android:layout_height="match_parent"
             android:fastScrollEnabled="false"
             android:orientation="vertical"
+            android:overScrollMode="never"
             android:scrollbarSize="3dp"
             android:scrollbarThumbVertical="@color/scrollBar"
             ptr:ptrAnimationStyle="flip"
+            ptr:ptrShowIndicator="false"
             ptr:ptrDrawable="@drawable/default_ptr_flip" />
 
         <TextView
